force-app/main/default/objects/Branch_Performance_by_Pillar__c/Branch_Performance_by_Pillar__c.object-meta.xml
<CustomObject>
    <label>Branch Performance by Pillar</label>
    <nameField>
        <displayFormat>BPP-{0000000000}</displayFormat>
        <label>Branch Performance by Pillar Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Branch Performance by Pillar</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>