force-app/main/default/objects/Branch_Performance_by_Pillar__c/fields/Indicator_Parent_Name__c.field-meta.xml
<CustomField>
    <fullName>Indicator_Parent_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Indicator Parent Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>