force-app/main/default/objects/Branch_Performance_by_Pillar__c/fields/Indicator_Rank__c.field-meta.xml
<CustomField>
    <fullName>Indicator_Rank__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Indicator Rank</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>