force-app/main/default/objects/Branch_Performance_by_Pillar__c/fields/KPI_Value__c.field-meta.xml
<CustomField>
    <fullName>KPI_Value__c</fullName>
    <label>KPI Value</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>